--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,9 @@
             <div class="chat-container" id="chat-box">
                 <!-- Chat messages will be inserted here -->
             </div>
+            <div id="file_holder">
+
+            </div>
             <div class="input-area">
                 <textarea id="user-input" rows="6" placeholder="Type your message..."></textarea>
                 <div class="button-group">
